グループチャット機能追加
