# backend/api/gen/oas_client_gen.go
@@ -46,6 +46,12 @@ type Invoker interface {
 	//
 	// GET /chat-rooms
 	GetChatRooms(ctx context.Context) ([]ChatRoom, error)
+	// GetMe invokes GetMe operation.
+	//
+	// 現在ログインしているユーザーを取得.
+	//
+	// GET /me
+	GetMe(ctx context.Context) (*User, error)
 	// LoginPost invokes POST /login operation.
 	//
 	// Login.
@@ -336,6 +342,78 @@ func (c *Client) sendGetChatRooms(ctx context.Context) (res []ChatRoom, err erro
 
 	stage = "DecodeResponse"
 	result, err := decodeGetChatRoomsResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// GetMe invokes GetMe operation.
+//
+// 現在ログインしているユーザーを取得.
+//
+// GET /me
+func (c *Client) GetMe(ctx context.Context) (*User, error) {
+	res, err := c.sendGetMe(ctx)
+	return res, err
+}
+
+func (c *Client) sendGetMe(ctx context.Context) (res *User, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("GetMe"),
+		semconv.HTTPRequestMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/me"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, GetMeOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/me"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeGetMeResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
