# backend/api/openapi.yaml
@@ -177,6 +177,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ChatRoom'
+  /me:
+    get:
+      operationId: GetMe
+      summary: 現在ログインしているユーザーを取得
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
 
 
 components:
